fix: webpack build of spa

--- a/millaggregator/pom.xml
+++ b/millaggregator/pom.xml
@@ -75,6 +75,14 @@
 							<arguments>install</arguments>
 						</configuration>
 					</execution>
+					<execution>
+						<id>webpack build</id>
+						<goals>
+							<goal>webpack</goal>
+						</goals>
+						<!-- optional: the default phase is "generate-resources" -->
+						<phase>generate-resources</phase>
+					</execution>
 				</executions>
 			</plugin>
 		</plugins>
